--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>blockquote</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                background-color: #f0f0f0;
+                color: #333;
+                padding: 20px;
+            }
+            blockquote {
+                background-color: #007bff;
+                color: #fff;
+                padding: 20px;
+                border-radius: 10px;
+                font-style: italic;
+            }
+        </style>
     </head>
     <body bgcolor="#CCCCCC">
         <p align = "center"><a href="https://gabriel485s.github.io/aula3-menu/">MenuAula3</a></p>
